--- a/intro.css
+++ b/intro.css
@@ -14,6 +14,24 @@
   font-weight: 700;
   color: rgb(248, 130, 178);
 }
+.outline-block-add{
+  border:solid 1px rgba(255, 255, 255, 0.245);
+  backdrop-filter: blur(1px);
+  padding: 15px;
+  border-radius: 10px;
+  width: 90%;
+  height: 15vh;
+}
+.outline-block-add p{
+  font-size: 30px;
+  color: rgba(255, 255, 255, 0.646);
+  font-weight: 200;
+}
+.outline-block-add h6{
+  font-size: 15px;
+  color: rgba(255, 255, 255, 0.646);
+  font-weight: 500;
+}
 .outline-block{
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(1px);
