--- a/contribute.css
+++ b/contribute.css
@@ -9,13 +9,14 @@
 }
 .days-space{
   justify-content: space-around;
-  margin: 10px 0; 
+  margin: 10px 0;
+  margin-right: 10px;  
   height: 100%;
+  width: fit-content;
 }
 .days-text{
   font-size: 7px;  
-  margin:  0 0; 
-  margin-right: 7px; 
+  margin: 0 0; 
 }
 .name-days{
   display: grid;
@@ -31,8 +32,8 @@
 .days {
   display: grid;
   grid-gap: 4px;  
-  margin: 10px 0 0 0;
-  width: 100%;
+  margin: 10px 0 0;
+  width: fit-content;
   height: fit-content; 
   border-radius: 4px;
   grid-template-rows: repeat(7, 1fr); 
@@ -41,9 +42,18 @@
     0 5px 15px rgba(0, 0, 0, 0.06);
 }
 
+.days-name{
+  width: 100%;
+}
+
 .day {
   width: 7px;
   height: 7px;     
+}
+
+.days-block{
+  margin: 0;
+  align-content: start;
 }
 
 .inactive {
@@ -65,4 +75,92 @@
 
 .very-active {
   background-color: #ff4b4b;
+}
+
+.button-days-group{ 
+  display: flex;
+  align-items: start;
+  margin: 0; 
+  padding: 0;
+  margin-top: -35px;
+  padding-top: 35px;
+  padding-left: 5px; 
+  padding-right: 5px; 
+  border-radius: 10px 10px 0 0; 
+  background-color: rgba(255, 255, 255, 0.1);
+  gap: 1px;
+}
+
+.button-days-group button{
+  background-color: rgba(255, 251, 251, 0.067);
+  border-radius: 0;
+  border: none;
+  color: rgb(255, 255, 255); 
+  font-size: 12px;
+  margin: 0;
+  margin-top: -32px;
+}
+
+.button-days-group button:hover{
+  background-color: rgb(112, 79, 219);
+  color: rgb(255, 255, 255);  
+}
+
+.outside-button-days-group{
+  align-items: start;
+}
+
+
+@media (max-width: 1399px) {
+  .day{
+    width: 14px;
+    height: 14px; 
+  }
+  .days-block {
+    overflow-x: scroll;
+    width: 100%;
+    padding: 5px 5px;
+  }
+  .days-text{
+    font-size: 12px;  
+    margin:  0 0; 
+  }
+  .button-days-group button{
+    font-size: 15px;
+    margin-top: -36px;
+  }
+}
+
+@media (max-width: 760px) {
+  .days-block {
+    overflow-x: scroll;
+    width: 100%;
+    padding: 5px 5px;
+  }
+  .day{
+    width: 7px;
+    height: 7px; 
+  }
+  .days-text{
+    font-size: 7px;  
+    margin:  0 0; 
+  }
+  .button-days-group button{
+    font-size: 10px;
+    margin-top: -34px;
+  }
+  
+}
+
+@media (max-width: 460px) {
+  .button-days-group{
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  } 
+}
+@media (max-width: 375px) {
+  .button-days-group{
+    overflow-x: scroll;
+  } 
 }
