--- a/intro.css
+++ b/intro.css
@@ -4,18 +4,21 @@
   margin-right: 10px;
   color: rgb(128, 128, 253);
 }
+
 .after-hello{
   font-size: 30px;
   font-weight: 700;
   color: rgb(255, 255, 255);
 }
+
 .zev{
   font-size: 30px;
   font-weight: 700;
   color: rgb(248, 130, 178);
 }
+
 .outline-block-add{
-  border:solid 1px rgba(255, 255, 255, 0.245);
+  border: solid 1px rgba(255, 255, 255, 0.245);
   backdrop-filter: blur(1px);
   padding: 15px;
   border-radius: 10px;
@@ -32,7 +35,15 @@
   color: rgba(255, 255, 255, 0.646);
   font-weight: 500;
 }
+
 .outline-block{
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(1px);
+  padding: 15px;
+  border-radius: 10px;
+  width: fit-content;
+}
+.outline-block-hello{
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(1px);
   padding: 15px;
@@ -48,6 +59,33 @@
 }
 .num-5{
   color: rgb(57, 255, 126);
+}
+
+@media (max-width: 1399px) {
+  .outline-block-hello{
+    
+  }
+  .outline-block{
+    width: fit-content;
+  }
+  .hello{
+    font-size: 35px; 
+  }
+  .after-hello{
+    font-size: 22px;
+  }
+  .zev{
+    font-size:  20px; 
+  }
+}
+
+@media (max-width: 760px) {
+  .intro-text{
+    font-size: 13px;
+  }
+  .dream{
+    font-size: 13px; 
+  }
 }
 
 .blink {
@@ -148,12 +186,16 @@
   font-size: 12px;
   margin: 0 0 5x 0;
 }
-.timeline-content p{
+.timeline-content p{ 
   font-size: 15px;
   margin: 0;
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 1399px) {
+  .timeline {
+    margin-top: 40px;
+    width: 100%; 
+  }
   .timeline::after {
     left: 31px;
   }
